--- a/app/css/tabla_inicio.css
+++ b/app/css/tabla_inicio.css
@@ -4,20 +4,23 @@
     opacity: 0.7;
     color: #000;
     width: 50%;
-    /*margin-left: 0px;*/
+    margin-left:auto; 
+    margin-right:auto;
  }
  th {
     color: #ffffff;
     background: #4f0961;
     width: 25%;
-    text-align: left;
-    vertical-align: top;
+    height: 50px;
+    text-align: center;
+    vertical-align: center;
     border: 2.5px solid #4f0961;
  }
  td {
     width: 25%;
-    text-align: left;
-    vertical-align: top;
+    height: 50px;
+    text-align: center;
+    vertical-align: center;
     border: 2.5px solid #4f0961;
  }
  
