--- a/app/css/index.css
+++ b/app/css/index.css
@@ -12,3 +12,29 @@ body{
 .nav-link{
     color:white;
 }
+
+#tablaHoroscopos {
+    border: 5px solid #4f0961;
+    background: #ffffff;
+    opacity: 0.7;
+    color: #000;
+    width: 50%;
+    margin-left:auto; 
+    margin-right:auto;
+ }
+ th {
+    color: #ffffff;
+    background: #4f0961;
+    width: 25%;
+    height: 50px;
+    text-align: center;
+    vertical-align: center;
+    border: 2.5px solid #4f0961;
+ }
+ td {
+    width: 25%;
+    height: 50px;
+    text-align: center;
+    vertical-align: center;
+    border: 2.5px solid #4f0961;
+ }
